--- a/light_bulb/pca10056/blank/armgcc/Makefile
+++ b/light_bulb/pca10056/blank/armgcc/Makefile
@@ -64,6 +64,7 @@ SRC_FILES += \
   $(SDK_ROOT)/modules/nrfx/drivers/src/nrfx_uarte.c \
   $(PROJ_DIR)/main.cpp \
   $(PROJ_DIR)/clusters/commons.cpp \
+  $(PROJ_DIR)/clusters/basic.cpp \
   $(PROJ_DIR)/clusters/level_control.cpp \
   $(PROJ_DIR)/clusters/on_off.cpp \
   $(PROJ_DIR)/color_helpers.cpp \
