Extract Home Automation dimmable light into separate cluster

--- a/light_bulb/pca10056/blank/armgcc/Makefile
+++ b/light_bulb/pca10056/blank/armgcc/Makefile
@@ -70,6 +70,7 @@ SRC_FILES += \
   $(PROJ_DIR)/clusters/level_control.cpp \
   $(PROJ_DIR)/clusters/on_off.cpp \
   $(PROJ_DIR)/clusters/scenes.cpp \
+  $(PROJ_DIR)/devices/home_automation_dimmable_light.cpp \
   $(PROJ_DIR)/color_helpers.cpp \
   $(SDK_ROOT)/modules/nrfx/mdk/system_nrf52840.c \
 
